# midi-reader-haskell

./: .gitignore  README.md  midi-reader-haskell.cabal  midi-reader.cabal  stack.yaml
app/: Main.hs
src/: MidiParser.hs
