name:                midi-reader
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/midi-reader#readme
license:             BSD3
license-file:        LICENSE
author:              Ryo Ota
maintainer:          nwtgck@gmail.com
copyright:           2017 Author Ryo Ota
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable midi-reader-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , midi-reader
                     , parsec
                     , word8
                     , bytestring
  default-language:    Haskell2010

test-suite midi-reader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , midi-reader
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/midi-reader
